# Knowledge_base

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.kafka  Dockerfile.kb  Dockerfile.keycloak  Dockerfile.kong  README.md  auth-runbook.md  auth-system.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  pipeline-visualizer.html  pnpm-lock.yaml  pyproject.toml  release-system.md  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
alembic/: Dockerfile  alembic.ini  env.py
alembic/versions/: a1b2c3d4e5f6_enable_tenant_rls.py  ff9ae8dcd7f7_initial_schema.py
app/: main.py  requirements.txt  router.py
app/basemodel/: data.py  policy.py  warehouse.py
app/dependencies/: ui_context.py
archive/docker-legacy/: Dockerfile.backend.legacy  Dockerfile.frontend.legacy  README.md  docker-compose.legacy.yml
basemodel/UI_model/: data.py  enum_type.py
basemodel/kb/: conflict.py  data.py  enum_type.py  inventory.py
basemodel/services_databaseconnector/: neo4j_model.py  postgres_model.py  postgres_orm.py  protocol_model.py  qdrant_model.py  shared_model.py
basemodel/services_docling/: docling_model.py
database/: docker-compose.yml
database/Postgres/: init.sql
docker/: .dockerignore  Dockerfile  README.md  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.messaging.yml  docker-compose.observability.yml  docker-compose.security.yml  docker-compose.test.yml  docker-compose.yml
docker/old/: docker-compose.yml
docs/: api-contracts.md  architecture-report.md  auth-db-design.md  auth-release-tech-stack-update.md  auth-release-tech-stack.md  auth-runbook.md  auth-setup-guide.md  auth-system.md  db-ui-mapping.md
infra/: Dockerfile.dev  Dockerfile.kb  bash.exe.stackdump  docker-compose.dev.yml  docker-compose.kb-ui-testing.yml  docker-compose.local.yml  docker-compose.security.yml  docker-compose.storage.yml  docker-compose.yml
infra/Neo4j/: Dockerfile  docker-compose.yml
infra/Postgres/: Dockerfile  setup.sh
infra/Qdrant/: COLLECTIONS.md  Dockerfile  config.yaml
infra/certs/: .gitignore  gen-certs.sh
infra/docling/: Dockerfile  app.py  config.py  minio_client.py  parser.py
infra/haproxy/: haproxy.cfg
infra/kafka/: Dockerfile  admin_release.props  admin_release.props.example  debug_consumer.py  kafka-broker-jaas.config  kafka-broker-jaas.config.example  kafka-launch.sh  kafka-setup.sh  release-setup.sh  rw.props  rw.props.example
infra/kb-ingestion-worker/: Dockerfile  config.py  conflict_resolver.py  docling_parser.py  entity_registry.py  gold.py  llama_client.py  log_writer.py  main.py  pipeline_events.py  requirements.txt  silver.py  worker.py
infra/keycloak/: keycloak-setup.py  keycloak-setup.sh  realm-export.json  setup-audience-mappers.sh
infra/kong/: jwks-refresh.sh  kong-setup.sh  register-prefn.py
infra/litellm/: config.kb-test.yaml  config.yaml
infra/model-service/: Dockerfile  app.py  config.py  main.py  models.py
infra/openbao/: config.hcl  openbao-init.sh  openbao-secrets-bootstrap.sh  openbao-setup.sh
infra/postgres/: init-schema.sh  init.sql
infra/scripts/: bootstrap-dev-env.ps1  bootstrap-dev-env.sh  reset-dev-stack.ps1  reset-dev-stack.sh  test_tenant_isolation.py  verify_kong_admin_locked.sh
infra/sql/: create-extra-dbs.sql  init.sql  release-init.sql  seed-ui-test-data.sql
model/ollama/: .dockerignore  _logging.py  api.py  llama.py  model_manager.py  requirements.txt  start_llama_server.py  start_llama_simple.py
my_doc/: BACKEND_UI_INTEGRATION.md  CURRENT_WIRING_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  GOAL_COMPLETION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  README.md  RUN_ON_VM.md  TYPE_CONSISTENCY_VERIFICATION.md  UUID_SERIALIZATION_CONVENTION.md
server/: main.py  router.py
server/basemodel/: API_response.py  __init__.py  conflict.py  data.py  enum_type.py  fleet.py  ingest.py  inventory.py  knowledge.py  policy.py  protocol_model.py  warehouse.py
services/: .dockerignore
services/audit-bridge/: main.py  requirements.txt
services/audit-consumer/: main.py
services/auth-api/: Dockerfile  app.py  auth_core.py  main.py  requirements.txt  schemas.py
services/backend/: dev_reset.py  dev_seed.py  main.py  requirements.txt
services/database_connector/: POSTGRES_CLIENT.md  POSTGRES_CONNECTOR_GUIDE.md  QDRANT_CLIENT.md  db_config.py  docling_connector.py  kafka_connector.py  minio_connector.py  (+7 more)
src/: App.tsx  AppStateContext.tsx  constants.ts  index.css  main.tsx  types.ts
testing/: agentMock.ts  deploymentMock.ts  server.js  server.py  test_integration.py
tests/: README.md  conftest.py
(+393 files in other folders)
