[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data-agent"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
