[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data-agent"
version = "0.1.0"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "testcontainers[postgres,redis,kafka]>=4.7",
    "httpx>=0.27",
    "requests>=2.31",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "archive*", "node_modules*", "dist*"]

# ─── Pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: fast pure-Python tests, no external services or Docker",
    "integration: tests that spin up Docker containers via testcontainers",
    "e2e: tests that drive a fully-running docker-compose stack (LIVE_STACK=1)",
]
filterwarnings = [
    "error",
    # Upstream deprecation noise is not our bug — only fail on Deprecation
    # warnings that point back at our own code. Once `services.*` and
    # `basemodel.*` are clean, switch to scoped-error like:
    #     "error::DeprecationWarning:services.*"
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # FastAPI TestClient + anyio MemoryStream: __exit__ closes the client
    # synchronously but anyio's async streams are GC'd later and surface a
    # benign ResourceWarning. pytest 8's unraisableexception plugin wraps it
    # as PytestUnraisableExceptionWarning. Real resource leaks from OUR code
    # still raise (filter scope is the pytest wrapper, not the underlying
    # ResourceWarning class). Drop this once anyio ships a sync __del__.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ─── Coverage ──────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["app", "services", "basemodel", "model"]
omit = [
    "*/tests/*",
    "*/archive/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ─── Ruff (lint + format) ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "archive",
    "alembic/versions",
    "node_modules",
    "dist",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear (common pitfalls)
    "BLE",      # blind except (one of the audit findings)
    "C4",       # comprehensions
    "SIM",      # simplifications
    "UP",       # pyupgrade
    "RUF",      # ruff-specific
    "ASYNC",    # async pitfalls (blocking call in async def)
]
ignore = [
    "E501",     # line too long — let formatter handle
    "B008",     # do not perform function calls in default args — fastapi Depends() needs this
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "BLE001"]   # asserts + broad except OK in tests
"alembic/**" = ["E", "F", "I"]    # alembic-generated

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "archive/",
    "alembic/versions/",
    "node_modules/",
    "dist/",
    "build/",
]

# Strict per-module: enforce only on greenfield/security-critical surfaces first.
# Expand this list as services are cleaned up.
[[tool.mypy.overrides]]
module = [
    "services.auth-api.*",
    "services.shared.*",
    "infra.kong.*",
]
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
